Disable assets in server and fix FB like causing page to render extra empty space on mobiles

--- a/client/src/scss/common/layout.scss
+++ b/client/src/scss/common/layout.scss
@@ -22,6 +22,11 @@ body {
 
 .FBLike {
   position: relative;
+
+  max-width: 300px;
+  max-height: 70px;
+  overflow: hidden;
+
   margin: 20px;
 
   @include fromWidth(600px) {
